# Discord-Bot

./: .dockerignore  .eslintrc.cjs  .gitignore  .prettierrc.json  Cargo.toml  Dockerfile  README.md  audit_logs.json  audit_logs.txt  bot.mjs  bot.py  command.ts  comps.json  db_migration.sh  deno.json  dependabot.yml  deploy-commands.mts  discordClient.mts  docker-compose.yml  dockerfile  drizzle.config.ts  index.mts  manual-migrate.ts  package-lock.json  package.json  run_bot.sh  shop_status.json  tsconfig.json  types.mts  verification-email.html
.github/: dependabot.yml
.github/workflows/: CI.yml  Deploy-Bot.yml  Lint-Format-Build-Check.yml  Lint-Type-Build-Check.yml  backup_audit_logs.yml
commands/: countdown.ts  ping.ts
commands/util/: countdown.mts  ping.mts
esp32/: .clang-format  platformio.ini
esp32/include/: config-example.h
events/: interactionCreate.mts  interactionCreate.ts  ready.mts
shop_status/: Dockerfile  shop_status.py
src/: Verification_Team_Roster.xlsx  build.rs  countdown-manager.mts  countdown-manager.ts  db.rs  db.ts  deploy-commands.mts  deploy-commands.ts  discord-client.ts  discord.rs  discordClient.mts  door-status.ts  embeds.rs  error.rs  gryphlife.js  gryphlife1.1.js  gryphlifehandler.js  gryphlifehandler.ts  gryphlifescraper.js  gryphlifescraper.ts  gryphlifexlsxhandler.py  index.mts  index.ts  main.rs  message-manager.mts  messageManager.mts  permissions.ts  posthog.ts  schema.rs  schema.ts  service.ts  types.mts  types.ts  util.ts  verification_email.html  vertification.ts  ~$Verification_Team_Roster.xlsx
(+57 files in other folders)
