[package]
name = "ugracing_bot"
version = "0.1.0"
edition = "2021"
authors = ["Danny Le <dle05@uoguelph.ca>"]
build = "./src/build.rs"

[dependencies]
anyhow = "1.0.86"
calamine = "0.25.0"
chrono = "0.4.38"
chrono-tz = "0.9.0"
cron = "0.12.1"
diesel = { version = "2.2.0", features = ["mysql", "time", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["mysql"] }
dotenv = "0.15.0"
lettre = { version = "0.11.7", features = ["tokio1", "tokio1-native-tls", "native-tls"] }
poise = "0.6.1"
rand = "0.8.5"
serde = "1.0.203"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["default", "rt-multi-thread"] }
toml = "0.8.14"
futures = "0.3.30"


